Corrected references and added length studies to intro

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,135 @@
+
+
+@article{Baeza-Delgado2013,
+abstract = {Recent advances in determination of the high-resolution structure of membrane proteins now enable analysis of the main features of amino acids in transmembrane (TM) segments in comparison with amino acids in water-soluble helices. In this work, we conducted a large-scale analysis of the prevalent locations of amino acids by using a data set of 170 structures of integral membrane proteins obtained from the MPtopo database and 930 structures of water-soluble helical proteins obtained from the protein data bank. Large hydrophobic amino acids (Leu, Val, Ile, and Phe) plus Gly were clearly prevalent in TM helices whereas polar amino acids (Glu, Lys, Asp, Arg, and Gln) were less frequent in this type of helix. The distribution of amino acids along TM helices was also examined. As expected, hydrophobic and slightly polar amino acids are commonly found in the hydrophobic core of the membrane whereas aromatic (Trp and Tyr), Pro, and the hydrophilic amino acids (Asn, His, and Gln) occur more frequently in the interface regions. Charged amino acids are also statistically prevalent outside the hydrophobic core of the membrane, and whereas acidic amino acids are frequently found at both cytoplasmic and extra-cytoplasmic interfaces, basic amino acids cluster at the cytoplasmic interface. These results strongly support the experimentally demonstrated biased distribution of positively charged amino acids (that is, the so-called the positive-inside rule) with structural data.},
+author = {Baeza-Delgado, Carlos and Marti-Renom, Marc A. and Mingarro, Ismael},
+doi = {10.1007/s00249-012-0813-9},
+file = {:home/jamesb/Documents/Mendeley Desktop/Baeza-Delgado, Marti-Renom, Mingarro - 2013 - Structure-based statistical analysis of transmembrane helices(2).pdf:pdf},
+isbn = {1432-1017 (Electronic)$\backslash$r0175-7571 (Linking)},
+issn = {01757571},
+journal = {European Biophysics Journal},
+keywords = {Amino acid distribution,Membrane protein,Statistical analysis,Transmembrane helices},
+mendeley-groups = {PhD manuscript,Lengths of TMH},
+month = {mar},
+number = {2-3},
+pages = {199--207},
+pmid = {22588483},
+title = {{Structure-based statistical analysis of transmembrane helices}},
+url = {http://link.springer.com/10.1007/s00249-012-0813-9},
+volume = {42},
+year = {2013}
+}
+@article{Bowie1997,
+abstract = {A survey of 45 transmembrane (TM) helices and 88 helix packing interactions in three independent transmembrane protein structures reveals the following features. (1) Helix lengths range from 14 to 36 residues with an average length of 26.4 residues. There is a preference for lengths greater than 20 residues. (2) The helices are tilted with respect to the bilayer normal by an average of 21°, but there is a decided preference for smaller tilt angles. (3) The distribution of helix packing angles is very different than for soluble proteins. The most common packing angles for TM helices are centered around +20° while for soluble proteins packing angles of around −35° are the most prevalent. (4) The average distance of closest approach is 9.6 {\AA}, which is the same as soluble proteins. (5) There is no preference for the positioning of the point of closest approach along the length of the helices. (6) It is almost a rule that TM helices pack against neighbors in the sequence. Of the 37 helices that have a sequence neighbor, 36 of them are in significant contact with a neighbor. (7) An antiparallel orientation is more prevalent than a parallel orientation and antiparallel interactions are more intimate on average. The general features of helix bundle membrane protein architecture described in this survey should prove useful in the modeling of helix bundle transmembrane proteins.},
+author = {Bowie, James U},
+doi = {10.1006/jmbi.1997.1279},
+isbn = {0022-2836 (Print)},
+issn = {0022-2836},
+journal = {Journal of Molecular Biology},
+keywords = {bacteriorhodopsin,cytochrome c oxidase,photosynthetic,protein structure,reaction center},
+mendeley-groups = {Lengths of TMH},
+number = {5},
+pages = {780--789},
+pmid = {9368657},
+title = {{Helix packing in membrane proteins}},
+url = {http://www.sciencedirect.com/science/article/pii/S0022283697912791{\%}5Cnhttp://www.sciencedirect.com/science?{\_}ob=MiamiImageURL{\&}{\_}cid=272582{\&}{\_}user=1853498{\&}{\_}pii=S0022283697912791{\&}{\_}check=y{\&}{\_}origin=article{\&}{\_}zone=toolbar{\&}{\_}coverDate=10-Oct-1997{\&}view=c{\&}originContentF},
+volume = {272},
+year = {1997}
+}
+@article{Cuthbertson2005,
+abstract = {The prediction of transmembrane (TM) helices plays an important role in the study of membrane proteins, given the relatively small number ([{\~{}}]0.5{\%} of the PDB) of high-resolution structures for such proteins. We used two datasets (one redundant and one non-redundant) of high-resolution structures of membrane proteins to evaluate and analyse TM helix prediction. The redundant (non-redundant) dataset contains structure of 434 (268) TM helices, from 112 (73) polypeptide chains. Of the 434 helices in the dataset, 20 may be classified as half-TM' as they are too short to span a lipid bilayer. We compared 13 TM helix prediction methods, evaluating each method using per segment, per residue and termini scores. Four methods consistently performed well: SPLIT4, TMHMM2, HMMTOP2 and TMAP. However, even the best methods were in error by, on average, about two turns of helix at the TM helix termini. The best and worst case predictions for individual proteins were analysed. In particular, the performance of the various methods and of a consensus prediction method, were compared for a number of proteins (e.g. SecY, ClC, KvAP) containing half-TM helices. The difficulties of predicting half-TM helices suggests that current prediction methods successfully embody the two-state model of membrane protein folding, but do not accommodate a third stage in which, e.g., short helices and re-entrant loops fold within a bundle of stable TM helices.},
+author = {Cuthbertson, Jonathan M. and Doyle, Declan A. and Sansom, Mark S P},
+doi = {10.1093/protein/gzi032},
+issn = {17410126},
+journal = {Protein Engineering, Design and Selection},
+keywords = {Channel,Membrane protein,Pore,Prediction,Secondary structure,Transmembrane helix},
+mendeley-groups = {Lengths of TMH},
+number = {6},
+pages = {295--308},
+pmid = {15932905},
+title = {{Transmembrane helix prediction: A comparative evaluation and analysis}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/15932905},
+volume = {18},
+year = {2005}
+}
+@article{Hildebrand2004,
+abstract = {A total of 160 transmembrane helices of 15 non-homologous high-resolution X-ray protein structures have been analyzed in respect of their structural features. The dihedral angles and hydrogen bonds of the helical sections that span the hydrophobic interior of the lipid bilayer have been investigated. The Ramachandran plot of protein channels and solute transporters exhibit a significant shift Delta (phi- and psi-angles) of Delta mean (+4.5 degrees and -5.4 degrees ), compared to a reference group of 151 alpha-helices of the same average length derived from water-soluble globular proteins. At the C-termini of transmembrane helices structural motifs equivalent to the Gly-caps of helices in globular proteins have been found, with two third of the transmembrane Gly-caps taking up a primary structure that is typically not found at helix termini exposed to a polar solvent. The structural particularities reported here are relevant for the three-dimensional modelling of membrane protein structures.},
+author = {Hildebrand, P W and Preissner, R and Frommel, C},
+doi = {10.1016/S0014-5793(04)00061-4\rS0014579304000614 [pii]},
+isbn = {0014-5793 (Print)},
+journal = {FEBS Lett},
+mendeley-groups = {Lengths of TMH},
+number = {1-3},
+pages = {145--151},
+pmid = {14960323},
+title = {{Structural features of transmembrane helices}},
+volume = {559},
+year = {2004}
+}
+@article{Pogozheva2013,
+abstract = {To gain insight into adaptations of proteins to their membranes, intrinsic hydrophobic thicknesses, distributions of different chemical groups and profiles of hydrogen-bonding capacities ($\alpha$ and $\beta$) and the dipolarity/polarizability parameter ($\pi$*) were calculated for lipid-facing surfaces of 460 integral $\alpha$-helical, $\beta$-barrel and peripheral proteins from eight types of biomembranes. For comparison, polarity profiles were also calculated for ten artificial lipid bilayers that have been previously studied by neutron and X-ray scattering. Estimated hydrophobic thicknesses are 30-31{\AA} for proteins from endoplasmic reticulum, thylakoid, and various bacterial plasma membranes, but differ for proteins from outer bacterial, inner mitochondrial and eukaryotic plasma membranes (23.9, 28.6 and 33.5{\AA}, respectively). Protein and lipid polarity parameters abruptly change in the lipid carbonyl zone that matches the calculated hydrophobic boundaries. Maxima of positively charged protein groups correspond to the location of lipid phosphates at 20-22{\AA} distances from the membrane center. Locations of Tyr atoms coincide with hydrophobic boundaries, while distributions maxima of Trp rings are shifted by 3-4{\AA} toward the membrane center. Distributions of Trp atoms indicate the presence of two 5-8{\AA}-wide midpolar regions with intermediate $\pi$* values within the hydrocarbon core, whose size and symmetry depend on the lipid composition of membrane leaflets. Midpolar regions are especially asymmetric in outer bacterial membranes and cell membranes of mesophilic but not hyperthermophilic archaebacteria, indicating the larger width of the central nonpolar region in the later case. In artificial lipid bilayers, midpolar regions are observed up to the level of acyl chain double bonds.},
+annote = {Different biomembranes have different thicknesses and different asymetry
+
+Published at the same time as baeza delgado
+
+No differences between bitopic and polytopic},
+author = {Pogozheva, Irina D. and Tristram-Nagle, Stephanie and Mosberg, Henry I. and Lomize, Andrei L.},
+doi = {10.1016/j.bbamem.2013.06.023},
+file = {:home/jamesb/Documents/Mendeley Desktop/Pogozheva et al. - 2013 - Structural adaptations of proteins to different biological membranes(2).pdf:pdf;:home/jamesb/Documents/Mendeley Desktop/Pogozheva et al. - 2013 - Structural adaptations of proteins to different biological membranes(3).pdf:pdf},
+isbn = {00052736},
+issn = {00052736},
+journal = {Biochimica et Biophysica Acta (BBA) - Biomembranes},
+keywords = {Cell Membrane,Cell Membrane: metabolism,Lipid Bilayers,Lipid Bilayers: metabolism,Membrane Proteins,Membrane Proteins: chemistry,Membrane Proteins: metabolism,Models,Molecular,Protein Conformation,Radiation,Scattering},
+mendeley-groups = {PhD manuscript,Lengths of TMH},
+month = {nov},
+number = {11},
+pages = {2592--2608},
+pmid = {23811361},
+title = {{Structural adaptations of proteins to different biological membranes}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0005273613002125},
+volume = {1828},
+year = {2013}
+}
+@article{Sharpe2010,
+abstract = {The various membranes of eukaryotic cells differ in composition, but it is at present unclear if this results in differences in physical properties. The sequences of transmembrane domains (TMDs) of integral membrane proteins should reflect the physical properties of the bilayers in which they reside. We used large datasets from both fungi and vertebrates to perform a comprehensive comparison of the TMDs of proteins from different organelles. We find that TMDs are not generic but have organelle-specific properties with a dichotomy in TMD length between the early and late parts of the secretory pathway. In addition, TMDs from post-ER organelles show striking asymmetries in amino acid compositions across the bilayer that is linked to residue size and varies between organelles. The pervasive presence of organelle-specific features among the TMDs of a particular organelle has implications for TMD prediction, regulation of protein activity by location, and sorting of proteins and lipids in the secretory pathway. ?? 2010 Elsevier Inc.},
+annote = {Monro paper
+SNAREs
+single pass},
+author = {Sharpe, Hayley J. and Stevens, Tim J. and Munro, Sean},
+doi = {10.1016/j.cell.2010.05.037},
+file = {:home/jamesb/Documents/Mendeley Desktop/Sharpe, Stevens, Munro - 2010 - A Comprehensive Comparison of Transmembrane Domains Reveals Organelle-Specific Properties.pdf:pdf},
+isbn = {0092-8674},
+issn = {00928674},
+journal = {Cell},
+keywords = {Cellbio,Organelle,Sequence,TMD},
+mendeley-groups = {PhD manuscript,Lengths of TMH},
+mendeley-tags = {Organelle,Sequence,TMD},
+month = {jul},
+number = {1},
+pages = {158--169},
+pmid = {20603021},
+title = {{A Comprehensive Comparison of Transmembrane Domains Reveals Organelle-Specific Properties}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0092867410006124},
+volume = {142},
+year = {2010}
+}
+@article{Ulmschneider2001a,
+abstract = {Advances in structure determination of membrane proteins enable analysis of the propensities of amino acids in extramembrane versus transmembrane locations to be performed on the basis of structure rather than of sequence and predicted topology. Using 29 available structures of integral membrane proteins with resolutions better than 4 {\AA} the distributions of amino acids in the transmembrane domains were calculated. The results were compared to analysis based on just the sequences of the same transmembrane $\alpha$-helices and significant differences were found. The distribution of residues between transmembrane $\alpha$-helices and $\beta$-strands was also compared. Large hydrophobic (Phe, Leu, Ile, Val) residues showed a clear preference for the protein surfaces facing the lipids for $\beta$-barrels, but in $\alpha$-helical proteins no such preference was seen, with these residues equally distributed between the interior and the surface of the protein. A notable exception to this was alanine, which showed a slight preference for the interior of $\alpha$-helical membrane proteins. Aromatic residues were found to follow saddle-like distributions preferring to be located in the lipid/water interfaces. The resultant 'aromatic belts' were spaced more closely for $\beta$-barrel than for $\alpha$-helical membrane proteins. Charged residues could be shown to generally avoid surfaces facing the bilayer although they were found to occur frequently in the transmembrane region of $\beta$-barrels. Indeed detailed comparison between $\alpha$-helical and $\beta$-barrel proteins showed many qualitative differences in residue distributions. This suggests that there may be subtle differences in the factors stabilising $\beta$-barrels in bacterial outer membranes and $\alpha$-helix bundles in all other membranes. {\textcopyright} 2001 Elsevier Science B.V.},
+author = {Ulmschneider, Martin B. and Sansom, Mark S P},
+doi = {10.1016/S0005-2736(01)00299-1},
+isbn = {0006-3002 (Print)$\backslash$r0006-3002 (Linking)},
+issn = {00052736},
+journal = {Biochimica et Biophysica Acta - Biomembranes},
+keywords = {Amino acid distribution,Membrane protein,$\alpha$-Helix,$\beta$-Barrel},
+mendeley-groups = {Lengths of TMH},
+number = {1},
+pages = {1--14},
+pmid = {11334619},
+title = {{Amino acid distributions in integral membrane protein structures}},
+url = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve{\&}db=PubMed{\&}dopt=Citation{\&}list{\_}uids=11334619},
+volume = {1512},
+year = {2001}
+}
 @article{Pinho2013,
 abstract = {Data summarization and triage is one of the current top challenges in visual analytics. The goal is to let users visually inspect large data sets and examine or request data with particular characteristics. The need for summarization and visual analytics is also felt when dealing with digital representations of DNA sequences. Genomic data sets are growing rapidly, making their analysis increasingly more difficult, and raising the need for new, scalable tools. For example, being able to look at very large DNA sequences while immediately identifying potentially interesting regions would provide the biologist with a flexible exploratory and analytical tool. In this paper we present a new concept, the "information profile", which provides a quantitative measure of the local complexity of a DNA sequence, independently of the direction of processing. The computation of the information profiles is computationally tractable: we show that it can be done in time proportional to the length of the sequence. We also describe a tool to compute the information profiles of a given DNA sequence, and use the genome of the fission yeast Schizosaccharomyces pombe strain 972 h(-) and five human chromosomes 22 for illustration. We show that information profiles are useful for detecting large-scale genomic regularities by visual inspection. Several discovery strategies are possible, including the standalone analysis of single sequences, the comparative analysis of sequences from individuals from the same species, and the comparative analysis of sequences from different organisms. The comparison scale can be varied, allowing the users to zoom-in on specific details, or obtain a broad overview of a long segment. Software applications have been made available for non-commercial use at http://bioinformatics.ua.pt/software/dna-at-glance.},
 author = {Pinho, Armando J. and Garcia, Sara P. and Pratas, Diogo and Ferreira, Paulo J S G},
