--- a/thesis.tex
+++ b/thesis.tex
@@ -49,9 +49,9 @@
 
 
 \title{Investigating the Recognition and Interactions of Non-Polar $\alpha$ Helices in Biology}
-\author{James Baker}
+\author{James Alexander Baker}
 \faculty{Life Sciences}
-\def\wordcount{7750}
+\def\wordcount{8496}
 % Uncomment the line below to suppress the `List of Tables' page (optional)
 \tablespagefalse
 
@@ -93,7 +93,7 @@ I would like to thank all members of both the Eisenhaber research group, as well
 \subsection*{Journal Articles} % the * hides the section number
 
 \subsection*{Posters}
-Baker, J. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE Proteins. {\it 40th FEBS Congress} Late Breaker (2015)
+Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE Proteins. {\it 40th FEBS Congress} Late Breaker (2015)
 
 \clearpage
 
