--- a/thesis.tex
+++ b/thesis.tex
@@ -40,11 +40,7 @@
 \newacronym{pdb}{PDB}{Protein Data Bank}
 \newacronym{sp}{SP}{Signal Peptide}
 \newacronym{snare}{SNARE}{Soluble N-Ethylmaleimide-Sensitive Factor Attachment Receptor}
-
-
 \makeglossaries
-
-
 \begin{document}
 
 
@@ -77,7 +73,7 @@ I would like to thank all members of both the Eisenhaber research group, as well
 %Shout out to all the Biopython devs that saved my sanity!
 
 %\subsection*{Preamble} %A side note. the "*" hides the section number.
-%In the 1950s and 1960s, the field of biological philosophy was still emerging. David Hull writes on the matter in his 1969 article entitled {\it``What Philosophy of Biology is not''}:
+%In the 1950s and 1960s, the field of biological philosophy was still emerging. David Hull writes on the matter in his 1969 article entitled \textit{``What Philosophy of Biology is not''}:
 
 %\begin{displayquote}
 %``Periodically through the history of biology, biologists have tried to do a little philosophy...''\cite{Hull1969}
@@ -93,7 +89,7 @@ I would like to thank all members of both the Eisenhaber research group, as well
 \subsection*{Journal Articles} % the * hides the section number
 
 \subsection*{Posters}
-Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE Proteins. {\it 40th FEBS Congress} Late Breaker (2015)
+Baker, J. A. and Warwicker, J. A Bioinformatic Method to Identify Potential SNARE Proteins. \textit{ 40th FEBS Congress} Late Breaker (2015)
 
 \clearpage
 
